progress in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link ref="stylesheet" href="styles.css">
+    <title>TOP: Sign-up Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="container">
+
+        <div class="left-pane">
+            <img src="ZetongLiUnsplash.avif">
+        </div>
+
+        <div class="right-pane">
+
+            <div class="heading-text">
+                <h1>This is not real online service! You know you need something<br>
+                like this in your life to help your realize your deepest dreams.<br>
+                Sign up <i>now</i> to get started.<br><br>
+
+                You <i>know</i> you want to.
+                </h1>
+            </div>
+
+            <div class="center-box">
+                <h1 id="center-box-heading">Let's do this!</h1>
+
+                <form action=# method="get">
+
+                    <div id="form-left">
+                        <div class="prompt">
+                            <label for="first-name">FIRST NAME<br></label>
+                            <input type="text" name="first-name" id="first-name">
+                        </div>
+
+                        <div class="prompt">
+                            <label for="email">EMAIL<br></label>
+                            <input type="email" name="email" id="email">
+                        </div>
+
+                        <div class="prompt">
+                            <label for="password">PASSWORD<br></label>
+                            <input type="password" name="password" id="password">
+                        </div>
+                    </div>
+
+                    <div id="form-right">
+                        <div class="prompt">
+                            <label for="last-name">LAST NAME<br></label>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+
+                        <div class="prompt">
+                            <label for="phone-number">PHONE NUMBER<br></label>
+                            <input type="tel" name="phone-number" id="phone-number">
+                        </div>
+
+                        <div class="prompt">
+                            <label for="confirm-password">CONFIRM PASSWORD<br></label>
+                            <input type="password" name="confirm-password" id="confirm-password">
+                        </div>
+                    </div>
+
+                </form>
+                
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
