completed index.html?

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="right-pane">
 
-            <div class="heading-text">
+            <div class="heading-box">
                 <h1>This is not real online service! You know you need something<br>
                 like this in your life to help your realize your deepest dreams.<br>
                 Sign up <i>now</i> to get started.<br><br>
@@ -67,6 +67,15 @@
                 </form>
                 
             </div>
+
+            <div class="footer-box">
+                <button>Create Account</button>
+
+                <div class="footer-text">
+                    <p>Already have an account? <a href=#>Log in</href></p>
+                </div>
+            </div>
+
         </div>
 
     </div>
