updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP: Sign-up Form</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/jellee-typeface" type="text/css"/>
 </head>
 <body>
     <div id="container">
 
         <div class="left-pane">
-            <img src="ZetongLiUnsplash.avif">
+            <div>
+                <img id="odin-img" src="odin-lined.png">
+                <h1>ODIN</h1>
+            </div>
+            <p>Photo by Zetong Li Unsplash</p>
         </div>
 
         <div class="right-pane">
 
             <div class="heading-box">
-                <h1>This is not real online service! You know you need something<br>
+                <h1>This is not real online service! You know you need something
                 like this in your life to help your realize your deepest dreams.<br>
                 Sign up <i>now</i> to get started.<br><br>
 
