added form validation in css

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 
                     <div id="form-left">
                         <div class="prompt">
-                            <label for="first-name">FIRST NAME<br></label>
-                            <input type="text" name="first-name" id="first-name">
+                            <label for="first-name">FIRST NAME*<br></label>
+                            <input type="text" name="first-name" id="first-name" required>
                         </div>
 
                         <div class="prompt">
-                            <label for="email">EMAIL<br></label>
-                            <input type="email" name="email" id="email">
+                            <label for="email">EMAIL*<br></label>
+                            <input type="email" name="email" id="email" required>
                         </div>
 
                         <div class="prompt">
-                            <label for="password">PASSWORD<br></label>
-                            <input type="password" name="password" id="password">
+                            <label for="password">PASSWORD*<br></label>
+                            <input type="password" name="password" id="password" required>
                         </div>
                     </div>
 
                     <div id="form-right">
                         <div class="prompt">
-                            <label for="last-name">LAST NAME<br></label>
-                            <input type="text" name="last-name" id="last-name">
+                            <label for="last-name">LAST NAME*<br></label>
+                            <input type="text" name="last-name" id="last-name" required>
                         </div>
 
                         <div class="prompt">
@@ -64,8 +64,8 @@
                         </div>
 
                         <div class="prompt">
-                            <label for="confirm-password">CONFIRM PASSWORD<br></label>
-                            <input type="password" name="confirm-password" id="confirm-password">
+                            <label for="confirm-password">CONFIRM PASSWORD*<br></label>
+                            <input type="password" name="confirm-password" id="confirm-password" required>
                         </div>
                     </div>
 
